# tap-facebook-pages

./: .gitignore  README.md  pyproject.toml
tap_facebook_pages/: insights.py  streams.py  tap.py
tap_facebook_pages/schemas/: page.json  page_insights.json  post_attachments.json  post_insights.json  post_tagged_profile.json  posts.json
tap_facebook_pages/tests/: __init__.py  test_core.py
